update table for 2.11

--- a/tables/sud_deps/appos.json
+++ b/tables/sud_deps/appos.json
@@ -1,12 +1,12 @@
 {
-  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 SUD 2.10",
+  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 SUD 2.11",
   "grew_match": {
     "appos": {
       "code": [
         "pattern {M -[1=appos,!2]-> N}"
       ],
       "key": null,
-      "users": 195
+      "users": 204
     }
   },
   "columns": [
@@ -18,9 +18,9 @@
   "cells": [
     {
       "appos": [
-        8770,
-        0.5476800099918816,
-        0.020320446725442264
+        8774,
+        0.5479298070317866,
+        0.020329714888144862
       ],
       "treebank": "SUD_Spanish-GSD@2.10"
     },
@@ -86,8 +86,8 @@
     {
       "appos": [
         1929,
-        0.11605799891703267,
-        0.007570019739346443
+        0.11605101672482253,
+        0.007570079154223194
       ],
       "treebank": "SUD_English-EWT@2.10"
     },
@@ -119,7 +119,7 @@
       "appos": [
         2024,
         0.20065430752453653,
-        0.007235729632529324
+        0.0072381878781810115
       ],
       "treebank": "SUD_Italian-VIT@2.10"
     },
@@ -128,9 +128,9 @@
     },
     {
       "appos": [
-        29,
-        0.02575488454706927,
-        0.003233719892952721
+        28,
+        0.023688663282571912,
+        0.003056768558951965
       ],
       "treebank": "SUD_Guajajara-TuDeT@2.10"
     },
@@ -155,9 +155,9 @@
     },
     {
       "appos": [
-        1059,
-        0.038701896721850676,
-        0.0030249364449141647
+        1046,
+        0.03822680261667215,
+        0.002987803136336371
       ],
       "treebank": "SUD_Korean-Kaist@2.10"
     },
@@ -168,6 +168,14 @@
         0.0033769219715476364
       ],
       "treebank": "SUD_Cantonese-HK@2.10"
+    },
+    {
+      "appos": [
+        17,
+        0.17,
+        0.004600811907983762
+      ],
+      "treebank": "SUD_Chinese-PatentChar@2.10"
     },
     {
       "appos": [
@@ -187,9 +195,9 @@
     },
     {
       "appos": [
-        2602,
-        0.4648088603072526,
-        0.021324198293736323
+        2604,
+        0.46516613076098606,
+        0.021340938706267056
       ],
       "treebank": "SUD_Indonesian-GSD@2.10"
     },
@@ -224,6 +232,11 @@
       "treebank": "SUD_Finnish-OOD@2.10"
     },
     {
+      "appos": [
+        7,
+        0.015283842794759825,
+        0.005090909090909091
+      ],
       "treebank": "SUD_Teko-TuDeT@2.10"
     },
     {
@@ -236,9 +249,9 @@
     },
     {
       "appos": [
-        358,
-        0.06494920174165457,
-        0.0035539495497999662
+        359,
+        0.06513062409288825,
+        0.003563876783179296
       ],
       "treebank": "SUD_Danish-DDT@2.10"
     },
@@ -263,9 +276,9 @@
     },
     {
       "appos": [
-        1355,
-        0.08952167019027484,
-        0.006701551001028725
+        1354,
+        0.08945560253699789,
+        0.006696605206932025
       ],
       "treebank": "SUD_Finnish-TDT@2.10"
     },
@@ -274,17 +287,17 @@
     },
     {
       "appos": [
-        48,
-        0.12,
-        0.012872083668543845
+        49,
+        0.1225,
+        0.013140252078305176
       ],
       "treebank": "SUD_Frisian_Dutch-Fame@2.10"
     },
     {
       "appos": [
-        22,
-        0.06432748538011696,
-        0.0069160641307764855
+        24,
+        0.06504065040650407,
+        0.006995045176333431
       ],
       "treebank": "SUD_Moksha-JR@2.10"
     },
@@ -293,9 +306,9 @@
     },
     {
       "appos": [
-        133,
-        0.10270270270270271,
-        0.003274813483367395
+        132,
+        0.1021671826625387,
+        0.003260225251926497
       ],
       "treebank": "SUD_Italian-MarkIT@2.10"
     },
@@ -317,17 +330,17 @@
     },
     {
       "appos": [
-        389,
-        0.19343610144206863,
-        0.0074563925627755415
+        408,
+        0.18862690707350901,
+        0.007304235740628021
       ],
       "treebank": "SUD_Coptic-Scriptorium@2.10"
     },
     {
       "appos": [
-        1308,
-        1.222429906542056,
-        0.03673538167724541
+        1494,
+        0.8711370262390671,
+        0.03071104076304808
       ],
       "treebank": "SUD_Old_East_Slavic-RNC@2.10"
     },
@@ -335,17 +348,20 @@
       "appos": [
         1703,
         0.337963881722564,
-        0.012082384408544934
+        0.01208229868747783
       ],
       "treebank": "SUD_Hebrew-IAHLTwiki@2.10"
     },
     {
       "appos": [
-        11,
-        0.11827956989247312,
-        0.0075445816186556925
+        25,
+        0.16891891891891891,
+        0.010964912280701754
       ],
       "treebank": "SUD_Tatar-NMCTT@2.10"
+    },
+    {
+      "treebank": "SUD_Abaza-ATB@2.10"
     },
     {
       "appos": [
@@ -381,17 +397,17 @@
     },
     {
       "appos": [
-        1536,
-        0.3281350138859218,
-        0.01051910697164772
+        1539,
+        0.32877590258491773,
+        0.010539652102451719
       ],
       "treebank": "SUD_Romanian-SiMoNERo@2.10"
     },
     {
       "appos": [
-        537,
-        0.08000595947556614,
-        0.004312456333368133
+        535,
+        0.07970798569725863,
+        0.004296257036626595
       ],
       "treebank": "SUD_Italian-PoSTWITA@2.10"
     },
@@ -415,13 +431,16 @@
       "treebank": "SUD_Western_Armenian-ArmTDP@2.10"
     },
     {
+      "treebank": "SUD_Sinhala-STB@2.10"
+    },
+    {
       "treebank": "SUD_Tagalog-Ugnayan@2.10"
     },
     {
       "appos": [
         39,
         0.04391891891891892,
-        0.0038790531131887808
+        0.0038778959928408075
       ],
       "treebank": "SUD_Breton-KEB@2.10"
     },
@@ -443,9 +462,9 @@
     },
     {
       "appos": [
-        51,
-        0.009050576752440106,
-        0.000881453187922363
+        77,
+        0.013664596273291925,
+        0.0013253924538694575
       ],
       "treebank": "SUD_Turkish-IMST@2.10"
     },
@@ -467,25 +486,25 @@
     },
     {
       "appos": [
-        6291,
-        0.3849825592069029,
-        0.015718383337664156
+        6277,
+        0.38410231305837716,
+        0.015681640463978696
       ],
       "treebank": "SUD_French-GSD@2.10"
     },
     {
       "appos": [
-        92,
-        0.05345729227193492,
-        0.0016575680593841774
+        82,
+        0.04764671702498547,
+        0.0014768388444636553
       ],
       "treebank": "SUD_Latin-UDante@2.10"
     },
     {
       "appos": [
-        84,
-        0.028,
-        0.0019198244731910225
+        194,
+        0.06466666666666666,
+        0.004430943516890117
       ],
       "treebank": "SUD_Vietnamese-VTB@2.10"
     },
@@ -520,7 +539,7 @@
       "appos": [
         187,
         0.187,
-        0.009011613898125392
+        0.00901335132790283
       ],
       "treebank": "SUD_Arabic-PUD@2.10"
     },
@@ -537,11 +556,19 @@
     },
     {
       "appos": [
-        118,
-        0.012088925315029198,
-        0.0009641862023320232
+        192,
+        0.01967011576682717,
+        0.0015333993546944383
       ],
       "treebank": "SUD_Turkish-BOUN@2.10"
+    },
+    {
+      "appos": [
+        49,
+        0.0539053905390539,
+        0.004846207101176936
+      ],
+      "treebank": "SUD_Western_Sierra_Puebla_Nahuatl-ITML@2.10"
     },
     {
       "treebank": "SUD_Classical_Chinese-Kyoto@2.10"
@@ -564,6 +591,9 @@
       "treebank": "SUD_Nayini-AHA@2.10"
     },
     {
+      "treebank": "SUD_Portuguese-CINTIL@2.10"
+    },
+    {
       "appos": [
         30,
         0.03978779840848806,
@@ -577,16 +607,16 @@
     {
       "appos": [
         1,
-        0.008403361344537815,
-        0.0016611295681063123
+        0.007518796992481203,
+        0.001272264631043257
       ],
       "treebank": "SUD_Umbrian-IKUVINA@2.10"
     },
     {
       "appos": [
-        193,
-        0.030513833992094862,
-        0.0024671473129825637
+        224,
+        0.031154381084840057,
+        0.0024727882895811716
       ],
       "treebank": "SUD_Estonian-EWT@2.10"
     },
@@ -597,6 +627,9 @@
         0.002125977813513587
       ],
       "treebank": "SUD_Czech-CLTT@2.10"
+    },
+    {
+      "treebank": "SUD_Zaar-Autogramm@2.10"
     },
     {
       "treebank": "SUD_Japanese-GSDLUW@2.10"
@@ -628,8 +661,8 @@
     {
       "appos": [
         11,
-        0.13253012048192772,
-        0.0043188064389477815
+        0.11578947368421053,
+        0.003747870528109029
       ],
       "treebank": "SUD_Low_Saxon-LSDC@2.10"
     },
@@ -683,17 +716,17 @@
     },
     {
       "appos": [
-        125,
-        0.03616898148148148,
-        0.00310667064320509
+        122,
+        0.03530092592592592,
+        0.003032110547768168
       ],
       "treebank": "SUD_Uyghur-UDT@2.10"
     },
     {
       "appos": [
-        1400,
-        0.0783348254252462,
-        0.007106562910848168
+        1403,
+        0.07850268576544316,
+        0.007121791259942843
       ],
       "treebank": "SUD_Russian-Taiga@2.10"
     },
@@ -715,9 +748,9 @@
     },
     {
       "appos": [
-        500,
-        0.0829737802854298,
-        0.00516422226812642
+        501,
+        0.08313972784600067,
+        0.005174550712662673
       ],
       "treebank": "SUD_Swedish-Talbanken@2.10"
     },
@@ -805,6 +838,9 @@
       "treebank": "SUD_Czech-CAC@2.10"
     },
     {
+      "treebank": "SUD_Japanese-Modern@2.10"
+    },
+    {
       "appos": [
         123,
         0.030773079809857395,
@@ -815,16 +851,16 @@
     {
       "appos": [
         7,
-        0.07,
-        0.00760043431053203
+        0.06140350877192982,
+        0.006979062811565304
       ],
       "treebank": "SUD_Komi_Permyak-UH@2.10"
     },
     {
       "appos": [
-        569,
-        0.033863000654645,
-        0.0020180668409273887
+        576,
+        0.0339802961477199,
+        0.0020180432688096696
       ],
       "treebank": "SUD_Latvian-LVTB@2.10"
     },
@@ -835,6 +871,14 @@
         0.003073805100489782
       ],
       "treebank": "SUD_Italian-TWITTIRO@2.10"
+    },
+    {
+      "appos": [
+        35,
+        0.23333333333333334,
+        0.009200841219768665
+      ],
+      "treebank": "SUD_Irish-Cadhan@2.10"
     },
     {
       "appos": [
@@ -854,9 +898,9 @@
     },
     {
       "appos": [
-        102,
-        0.059509918319719954,
-        0.00585802894555479
+        138,
+        0.06521739130434782,
+        0.006718270775522127
       ],
       "treebank": "SUD_Erzya-JR@2.10"
     },
@@ -870,9 +914,9 @@
     },
     {
       "appos": [
-        297,
-        0.09565217391304348,
-        0.010920723635828798
+        298,
+        0.09569685292228645,
+        0.010928160181891525
       ],
       "treebank": "SUD_Old_East_Slavic-Birchbark@2.10"
     },
@@ -921,9 +965,9 @@
     },
     {
       "appos": [
-        308,
-        0.06499261447562776,
-        0.0034238200048911714
+        311,
+        0.06559797511073613,
+        0.003457168901042709
       ],
       "treebank": "SUD_Scottish_Gaelic-ARCOSG@2.10"
     },
@@ -986,8 +1030,8 @@
     {
       "appos": [
         47,
-        0.02026735661923243,
-        0.0022782355792535145
+        0.02011986301369863,
+        0.0022677925211097706
       ],
       "treebank": "SUD_Manx-Cadhan@2.10"
     },
@@ -1001,17 +1045,17 @@
     },
     {
       "appos": [
-        155,
-        0.005745635170700968,
-        0.0003440506975350432
+        150,
+        0.005560292100678356,
+        0.0003329522879371386
       ],
       "treebank": "SUD_Latin-ITTB@2.10"
     },
     {
       "appos": [
-        86,
-        0.07977736549165121,
-        0.008162490508731966
+        87,
+        0.08070500927643785,
+        0.00825740318906606
       ],
       "treebank": "SUD_Kazakh-KTB@2.10"
     },
@@ -1019,7 +1063,7 @@
       "appos": [
         9325,
         0.21179222784982626,
-        0.009466457271000562
+        0.00946649571139827
       ],
       "treebank": "SUD_Icelandic-IcePaHC@2.10"
     },
@@ -1040,10 +1084,13 @@
       "treebank": "SUD_Chinese-GSD@2.10"
     },
     {
+      "treebank": "SUD_Icelandic-GC@2.10"
+    },
+    {
       "appos": [
-        3666,
-        0.11836115326251896,
-        0.008372730387118877
+        3664,
+        0.11831568070266081,
+        0.00836909920260575
       ],
       "treebank": "SUD_Estonian-EDT@2.10"
     },
@@ -1057,6 +1104,14 @@
     },
     {
       "appos": [
+        7,
+        0.03571428571428571,
+        0.0032618825722274
+      ],
+      "treebank": "SUD_Nheengatu-CompLin@2.10"
+    },
+    {
+      "appos": [
         97,
         0.097,
         0.005084923464038583
@@ -1065,9 +1120,9 @@
     },
     {
       "appos": [
-        997,
-        0.11065482796892342,
-        0.004999774333154471
+        999,
+        0.11087680355160932,
+        0.005009803970733517
       ],
       "treebank": "SUD_Croatian-SET@2.10"
     },
@@ -1154,9 +1209,9 @@
     },
     {
       "appos": [
-        850,
-        0.12039660056657224,
-        0.006962020132524101
+        861,
+        0.12140439932318105,
+        0.007014256619144603
       ],
       "treebank": "SUD_Ukrainian-IU@2.10"
     },
@@ -1171,24 +1226,24 @@
     {
       "appos": [
         1,
-        0.010416666666666666,
-        0.0020161290322580645
+        0.0034602076124567475,
+        0.0007127583749109052
       ],
       "treebank": "SUD_Yakut-YKTDT@2.10"
     },
     {
       "appos": [
-        664,
-        0.09584295612009237,
-        0.004198545684476762
+        351,
+        0.09929278642149929,
+        0.004365943155668885
       ],
       "treebank": "SUD_Icelandic-Modern@2.10"
     },
     {
       "appos": [
-        287,
-        0.15944444444444444,
-        0.006828130947849257
+        289,
+        0.16055555555555556,
+        0.006875713741910925
       ],
       "treebank": "SUD_Hungarian-Szeged@2.10"
     },
@@ -1217,15 +1272,26 @@
       "treebank": "SUD_Japanese-BCCWJ@2.10"
     },
     {
+      "treebank": "SUD_Malayalam-UFAL@2.10"
+    },
+    {
       "appos": [
         7,
-        0.02880658436213992,
-        0.006517690875232775
+        0.022653721682847898,
+        0.005287009063444109
       ],
       "treebank": "SUD_Akuntsu-TuDeT@2.10"
     },
     {
       "treebank": "SUD_Makurap-TuDeT@2.10"
+    },
+    {
+      "appos": [
+        2420,
+        0.27051196065280575,
+        0.009656630953093513
+      ],
+      "treebank": "SUD_Portuguese-PetroGold@2.10"
     },
     {
       "appos": [
@@ -1296,9 +1362,9 @@
     },
     {
       "appos": [
-        1837,
-        0.13673241533308522,
-        0.006877651190391506
+        1840,
+        0.13695571269073317,
+        0.00688888306495393
       ],
       "treebank": "SUD_Slovenian-SSJ@2.10"
     },
@@ -1336,11 +1402,14 @@
     },
     {
       "appos": [
-        13281,
-        1.471905131331043,
-        0.054787117746306895
+        8168,
+        0.9052421589271861,
+        0.03369484058066672
       ],
       "treebank": "SUD_Latin-LLCT@2.10"
+    },
+    {
+      "treebank": "SUD_Xavante-XDT@2.10"
     },
     {
       "appos": [
@@ -1379,6 +1448,14 @@
     },
     {
       "appos": [
+        37,
+        0.052781740370898715,
+        0.0018084066471163245
+      ],
+      "treebank": "SUD_Italian-ParlaMint@2.10"
+    },
+    {
+      "appos": [
         170,
         0.009857358227994897,
         0.0012980369100613132
@@ -1406,9 +1483,9 @@
     },
     {
       "appos": [
-        555,
-        0.061714666963193596,
-        0.004570045206393123
+        563,
+        0.06260424774824863,
+        0.004635919731890681
       ],
       "treebank": "SUD_Basque-BDT@2.10"
     },
@@ -1430,9 +1507,9 @@
     },
     {
       "appos": [
-        1140,
-        0.11969760604787905,
-        0.005217152533064848
+        1138,
+        0.11948761024779504,
+        0.005207713639816586
       ],
       "treebank": "SUD_Romanian-RRT@2.10"
     },
@@ -1454,9 +1531,9 @@
     },
     {
       "appos": [
-        1530,
-        0.24136299100804542,
-        0.019048330469858817
+        1510,
+        0.2382079192301625,
+        0.018799332685939096
       ],
       "treebank": "SUD_Korean-GSD@2.10"
     },
@@ -1497,9 +1574,9 @@
     },
     {
       "appos": [
-        229,
-        0.0979469632164243,
-        0.0050876452422741105
+        252,
+        0.101900525677315,
+        0.005192664331341438
       ],
       "treebank": "SUD_Welsh-CCG@2.10"
     },
@@ -1529,17 +1606,25 @@
     },
     {
       "appos": [
-        6044,
-        0.2395465895129008,
-        0.01980989839396919
+        3,
+        0.003105590062111801,
+        0.0001876172607879925
+      ],
+      "treebank": "SUD_Gheg-GPS@2.10"
+    },
+    {
+      "appos": [
+        6045,
+        0.23958622329673815,
+        0.019813111068138094
       ],
       "treebank": "SUD_Belarusian-HSE@2.10"
     },
     {
       "appos": [
-        79,
-        0.1446886446886447,
-        0.01886341929321872
+        86,
+        0.14802065404475043,
+        0.019077196095829637
       ],
       "treebank": "SUD_Tupinamba-TuDeT@2.10"
     },
@@ -1547,7 +1632,7 @@
       "appos": [
         3,
         0.006437768240343348,
-        0.000779423226812159
+        0.0007798284377436964
       ],
       "treebank": "SUD_Marathi-UFAL@2.10"
     },
@@ -1575,6 +1660,14 @@
     },
     {
       "treebank": "SUD_Naija-NSC@2.10"
+    },
+    {
+      "appos": [
+        30,
+        0.6521739130434783,
+        0.009775171065493646
+      ],
+      "treebank": "SUD_Old_East_Slavic-Ruthenian@2.10"
     },
     {
       "appos": [
@@ -1618,25 +1711,25 @@
     },
     {
       "appos": [
-        6061,
-        0.5042848822697396,
-        0.01900464690425872
+        6062,
+        0.5043680838672102,
+        0.019008140074502376
       ],
       "treebank": "SUD_Portuguese-GSD@2.10"
     },
     {
       "appos": [
         1057,
-        0.11577217962760132,
+        0.11584831214379658,
         0.006429596827173411
       ],
       "treebank": "SUD_English-GUM@2.10"
     },
     {
       "appos": [
-        3069,
-        0.3279897403013787,
-        0.013470688414066753
+        3072,
+        0.32831035588329593,
+        0.013483915427056495
       ],
       "treebank": "SUD_Portuguese-Bosque@2.10"
     },
@@ -1667,8 +1760,8 @@
     {
       "appos": [
         8,
-        0.03669724770642202,
-        0.0030211480362537764
+        0.03333333333333333,
+        0.0027884280237016382
       ],
       "treebank": "SUD_Skolt_Sami-Giellagas@2.10"
     }
