--- a/tables/ud_deps/appos.json
+++ b/tables/ud_deps/appos.json
@@ -1,16 +1,23 @@
 {
-  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 UD 2.10",
+  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 UD 2.11",
   "grew_match": {
     "appos": {
       "code": [
-        "pattern {M -[appos]-> N}"
+        "pattern {M -[1=appos,!2]-> N}"
       ],
       "key": null,
-      "users": 199
+      "users": 210
     },
     "appos:trans": {
       "code": [
-        "pattern {M -[appos:trans]-> N}"
+        "pattern {M -[1=appos,2=trans]-> N}"
+      ],
+      "key": null,
+      "users": 1
+    },
+    "appos:nmod": {
+      "code": [
+        "pattern {M -[1=appos,2=nmod]-> N}"
       ],
       "key": null,
       "users": 1
@@ -24,6 +31,10 @@
     {
       "field": "appos:trans",
       "headerName": "appos:trans"
+    },
+    {
+      "field": "appos:nmod",
+      "headerName": "appos:nmod"
     }
   ],
   "cells": [
@@ -45,11 +56,19 @@
     },
     {
       "appos": [
-        229,
-        0.0979469632164243,
-        0.0050876452422741105
+        252,
+        0.101900525677315,
+        0.005192664331341438
       ],
       "treebank": "UD_Welsh-CCG@2.10"
+    },
+    {
+      "appos": [
+        3,
+        0.003105590062111801,
+        0.0001876172607879925
+      ],
+      "treebank": "UD_Gheg-GPS@2.10"
     },
     {
       "appos": [
@@ -101,6 +120,14 @@
     },
     {
       "appos": [
+        30,
+        0.6521739130434783,
+        0.009775171065493646
+      ],
+      "treebank": "UD_Old_East_Slavic-Ruthenian@2.10"
+    },
+    {
+      "appos": [
         86,
         0.026976160602258468,
         0.002916440586001085
@@ -111,15 +138,15 @@
       "appos": [
         1703,
         0.337963881722564,
-        0.012082384408544934
+        0.01208229868747783
       ],
       "treebank": "UD_Hebrew-IAHLTwiki@2.10"
     },
     {
       "appos": [
-        29,
-        0.02575488454706927,
-        0.003233719892952721
+        28,
+        0.023688663282571912,
+        0.003056768558951965
       ],
       "treebank": "UD_Guajajara-TuDeT@2.10"
     },
@@ -157,17 +184,17 @@
     },
     {
       "appos": [
-        2602,
-        0.4648088603072526,
-        0.021324198293736323
+        2604,
+        0.46516613076098606,
+        0.021340938706267056
       ],
       "treebank": "UD_Indonesian-GSD@2.10"
     },
     {
       "appos": [
-        850,
-        0.12039660056657224,
-        0.0069487590333867436
+        861,
+        0.12140439932318105,
+        0.007000967613409984
       ],
       "treebank": "UD_Ukrainian-IU@2.10"
     },
@@ -205,33 +232,33 @@
     },
     {
       "appos": [
-        3069,
-        0.3279897403013787,
-        0.013470688414066753
+        3072,
+        0.32831035588329593,
+        0.013483915427056495
       ],
       "treebank": "UD_Portuguese-Bosque@2.10"
     },
     {
       "appos": [
-        86,
-        0.07977736549165121,
-        0.008162490508731966
+        87,
+        0.08070500927643785,
+        0.00825740318906606
       ],
       "treebank": "UD_Kazakh-KTB@2.10"
     },
     {
       "appos": [
-        537,
-        0.08000595947556614,
-        0.004312456333368133
+        535,
+        0.07970798569725863,
+        0.004296257036626595
       ],
       "treebank": "UD_Italian-PoSTWITA@2.10"
     },
     {
       "appos": [
-        155,
-        0.005745635170700968,
-        0.0003440506975350432
+        150,
+        0.005560292100678356,
+        0.0003329522879371386
       ],
       "treebank": "UD_Latin-ITTB@2.10"
     },
@@ -263,6 +290,14 @@
       "treebank": "UD_Buryat-BDT@2.10"
     },
     {
+      "appos": [
+        37,
+        0.052781740370898715,
+        0.0018084066471163245
+      ],
+      "treebank": "UD_Italian-ParlaMint@2.10"
+    },
+    {
       "treebank": "UD_Kaapor-TuDeT@2.10"
     },
     {
@@ -290,18 +325,21 @@
       "treebank": "UD_Latin-Perseus@2.10"
     },
     {
+      "treebank": "UD_Icelandic-GC@2.10"
+    },
+    {
       "appos": [
-        3666,
-        0.11836115326251896,
-        0.00836468760196317
+        3664,
+        0.11831568070266081,
+        0.008360620201029104
       ],
       "treebank": "UD_Estonian-EDT@2.10"
     },
     {
       "appos": [
-        997,
-        0.11065482796892342,
-        0.004999774333154471
+        999,
+        0.11087680355160932,
+        0.005009803970733517
       ],
       "treebank": "UD_Croatian-SET@2.10"
     },
@@ -323,9 +361,9 @@
     },
     {
       "appos": [
-        13281,
-        1.471905131331043,
-        0.054787117746306895
+        8168,
+        0.9052421589271861,
+        0.03369484058066672
       ],
       "treebank": "UD_Latin-LLCT@2.10"
     },
@@ -382,17 +420,17 @@
     },
     {
       "appos": [
-        80,
-        0.04537719795802609,
-        0.0026663111585121984
+        78,
+        0.027827327863003924,
+        0.0018196663944943427
       ],
       "treebank": "UD_French-ParisStories@2.10"
     },
     {
       "appos": [
         218,
-        0.023590520506438697,
-        0.0015483174476910184
+        0.023593073593073593,
+        0.0015483064510401353
       ],
       "treebank": "UD_Naija-NSC@2.10"
     },
@@ -406,17 +444,17 @@
     },
     {
       "appos": [
-        133,
-        0.10270270270270271,
-        0.003274813483367395
+        132,
+        0.1021671826625387,
+        0.003260225251926497
       ],
       "treebank": "UD_Italian-MarkIT@2.10"
     },
     {
       "appos": [
-        569,
-        0.033863000654645,
-        0.00201294083935034
+        576,
+        0.0339802961477199,
+        0.0020129162123626605
       ],
       "treebank": "UD_Latvian-LVTB@2.10"
     },
@@ -427,6 +465,14 @@
         0.01098214792645043
       ],
       "treebank": "UD_Chinese-GSDSimp@2.10"
+    },
+    {
+      "appos": [
+        35,
+        0.23333333333333334,
+        0.009200841219768665
+      ],
+      "treebank": "UD_Irish-Cadhan@2.10"
     },
     {
       "appos": [
@@ -481,17 +527,22 @@
     },
     {
       "appos": [
-        84,
-        0.028,
-        0.0019198244731910225
+        108,
+        0.036,
+        0.0024667108238357353
+      ],
+      "appos:nmod": [
+        86,
+        0.028666666666666667,
+        0.001964232693054382
       ],
       "treebank": "UD_Vietnamese-VTB@2.10"
     },
     {
       "appos": [
-        1530,
-        0.24136299100804542,
-        0.019048330469858817
+        1510,
+        0.2382079192301625,
+        0.018799332685939096
       ],
       "treebank": "UD_Korean-GSD@2.10"
     },
@@ -516,9 +567,9 @@
     },
     {
       "appos": [
-        8770,
-        0.5476800099918816,
-        0.020320446725442264
+        8774,
+        0.5479298070317866,
+        0.020329714888144862
       ],
       "treebank": "UD_Spanish-GSD@2.10"
     },
@@ -541,8 +592,8 @@
     {
       "appos": [
         1929,
-        0.11605799891703267,
-        0.007568831637637771
+        0.11605101672482253,
+        0.007568861335635251
       ],
       "treebank": "UD_English-EWT@2.10"
     },
@@ -551,9 +602,9 @@
     },
     {
       "appos": [
-        1308,
-        1.222429906542056,
-        0.03673538167724541
+        1494,
+        0.8711370262390671,
+        0.03071104076304808
       ],
       "treebank": "UD_Old_East_Slavic-RNC@2.10"
     },
@@ -601,15 +652,15 @@
       "appos": [
         2024,
         0.20065430752453653,
-        0.007235729632529324
+        0.0072381878781810115
       ],
       "treebank": "UD_Italian-VIT@2.10"
     },
     {
       "appos": [
-        102,
-        0.059509918319719954,
-        0.00585802894555479
+        138,
+        0.06521739130434782,
+        0.006718270775522127
       ],
       "treebank": "UD_Erzya-JR@2.10"
     },
@@ -639,9 +690,17 @@
     },
     {
       "appos": [
+        15,
+        0.01835985312117503,
+        0.0019672131147540984
+      ],
+      "treebank": "UD_Zaar-Autogramm@2.10"
+    },
+    {
+      "appos": [
         1,
-        0.008403361344537815,
-        0.0016611295681063123
+        0.007518796992481203,
+        0.001272264631043257
       ],
       "treebank": "UD_Umbrian-IKUVINA@2.10"
     },
@@ -657,15 +716,15 @@
       "appos": [
         3,
         0.006437768240343348,
-        0.000779423226812159
+        0.0007798284377436964
       ],
       "treebank": "UD_Marathi-UFAL@2.10"
     },
     {
       "appos": [
-        555,
-        0.061714666963193596,
-        0.004570045206393123
+        563,
+        0.06260424774824863,
+        0.004635919731890681
       ],
       "treebank": "UD_Basque-BDT@2.10"
     },
@@ -698,9 +757,9 @@
     },
     {
       "appos": [
-        1400,
-        0.0783348254252462,
-        0.007106562910848168
+        1403,
+        0.07850268576544316,
+        0.007121791259942843
       ],
       "treebank": "UD_Russian-Taiga@2.10"
     },
@@ -726,8 +785,8 @@
     {
       "appos": [
         11,
-        0.13253012048192772,
-        0.0043188064389477815
+        0.11578947368421053,
+        0.003747870528109029
       ],
       "treebank": "UD_Low_Saxon-LSDC@2.10"
     },
@@ -776,19 +835,27 @@
     },
     {
       "appos": [
-        1355,
-        0.08952167019027484,
-        0.006692977560002173
+        1354,
+        0.08945560253699789,
+        0.006687972023136234
       ],
       "treebank": "UD_Finnish-TDT@2.10"
     },
     {
       "appos": [
-        140,
-        0.04361370716510903,
-        0.0031643423818457157
+        133,
+        0.04144593331255843,
+        0.0030061932100718773
       ],
       "treebank": "UD_French-Rhapsodie@2.10"
+    },
+    {
+      "appos": [
+        7,
+        0.03571428571428571,
+        0.0032618825722274
+      ],
+      "treebank": "UD_Nheengatu-CompLin@2.10"
     },
     {
       "appos": [
@@ -808,9 +875,9 @@
     },
     {
       "appos": [
-        297,
-        0.09565217391304348,
-        0.010920723635828798
+        298,
+        0.09569685292228645,
+        0.010928160181891525
       ],
       "treebank": "UD_Old_East_Slavic-Birchbark@2.10"
     },
@@ -824,9 +891,9 @@
     },
     {
       "appos": [
-        11,
-        0.11827956989247312,
-        0.0075445816186556925
+        25,
+        0.16891891891891891,
+        0.010964912280701754
       ],
       "treebank": "UD_Tatar-NMCTT@2.10"
     },
@@ -834,7 +901,7 @@
       "appos": [
         9325,
         0.21179222784982626,
-        0.009466457271000562
+        0.00946649571139827
       ],
       "treebank": "UD_Icelandic-IcePaHC@2.10"
     },
@@ -851,9 +918,9 @@
     },
     {
       "appos": [
-        1140,
-        0.11969760604787905,
-        0.005217152533064848
+        1138,
+        0.11948761024779504,
+        0.005207713639816586
       ],
       "treebank": "UD_Romanian-RRT@2.10"
     },
@@ -888,6 +955,9 @@
       "treebank": "UD_Apurina-UFPA@2.10"
     },
     {
+      "treebank": "UD_Sinhala-STB@2.10"
+    },
+    {
       "appos": [
         116,
         0.116,
@@ -908,17 +978,17 @@
     },
     {
       "appos": [
-        664,
-        0.09584295612009237,
-        0.004198545684476762
+        351,
+        0.09929278642149929,
+        0.004365943155668885
       ],
       "treebank": "UD_Icelandic-Modern@2.10"
     },
     {
       "appos": [
-        287,
-        0.15944444444444444,
-        0.006828130947849257
+        289,
+        0.16055555555555556,
+        0.006875713741910925
       ],
       "treebank": "UD_Hungarian-Szeged@2.10"
     },
@@ -939,8 +1009,8 @@
     {
       "appos": [
         7,
-        0.07,
-        0.00760043431053203
+        0.06140350877192982,
+        0.006979062811565304
       ],
       "treebank": "UD_Komi_Permyak-UH@2.10"
     },
@@ -970,9 +1040,9 @@
     },
     {
       "appos": [
-        51,
-        0.009050576752440106,
-        0.000881453187922363
+        77,
+        0.013664596273291925,
+        0.0013253924538694575
       ],
       "treebank": "UD_Turkish-IMST@2.10"
     },
@@ -986,9 +1056,9 @@
     },
     {
       "appos": [
-        1837,
-        0.13673241533308522,
-        0.006877651190391506
+        1840,
+        0.13695571269073317,
+        0.00688888306495393
       ],
       "treebank": "UD_Slovenian-SSJ@2.10"
     },
@@ -1002,9 +1072,9 @@
     },
     {
       "appos": [
-        500,
-        0.0829737802854298,
-        0.005162142908764286
+        501,
+        0.08313972784600067,
+        0.005172467194581815
       ],
       "treebank": "UD_Swedish-Talbanken@2.10"
     },
@@ -1078,10 +1148,18 @@
     {
       "appos": [
         7,
-        0.02880658436213992,
-        0.006517690875232775
+        0.022653721682847898,
+        0.005287009063444109
       ],
       "treebank": "UD_Akuntsu-TuDeT@2.10"
+    },
+    {
+      "appos": [
+        2420,
+        0.27051196065280575,
+        0.009656630953093513
+      ],
+      "treebank": "UD_Portuguese-PetroGold@2.10"
     },
     {
       "treebank": "UD_Makurap-TuDeT@2.10"
@@ -1104,6 +1182,9 @@
         0.002063679245283019
       ],
       "treebank": "UD_Italian-Valico@2.10"
+    },
+    {
+      "treebank": "UD_Malayalam-UFAL@2.10"
     },
     {
       "appos": [
@@ -1136,7 +1217,7 @@
       "appos": [
         39,
         0.04391891891891892,
-        0.0038790531131887808
+        0.0038778959928408075
       ],
       "treebank": "UD_Breton-KEB@2.10"
     },
@@ -1164,9 +1245,9 @@
     },
     {
       "appos": [
-        1059,
-        0.038701896721850676,
-        0.0030249364449141647
+        1046,
+        0.03822680261667215,
+        0.002987803136336371
       ],
       "treebank": "UD_Korean-Kaist@2.10"
     },
@@ -1192,13 +1273,18 @@
       "treebank": "UD_Turkish_German-SAGT@2.10"
     },
     {
+      "appos": [
+        7,
+        0.015283842794759825,
+        0.005090909090909091
+      ],
       "treebank": "UD_Teko-TuDeT@2.10"
     },
     {
       "appos": [
         1057,
-        0.11577217962760132,
-        0.0064260006809007345
+        0.11584831214379658,
+        0.006425922548483191
       ],
       "treebank": "UD_English-GUM@2.10"
     },
@@ -1247,6 +1333,14 @@
     },
     {
       "appos": [
+        54,
+        0.00140625,
+        0.00011347875425545329
+      ],
+      "treebank": "UD_Portuguese-CINTIL@2.10"
+    },
+    {
+      "appos": [
         278,
         0.278,
         0.011243225754266764
@@ -1263,9 +1357,9 @@
     },
     {
       "appos": [
-        358,
-        0.06494920174165457,
-        0.0035539495497999662
+        359,
+        0.06513062409288825,
+        0.003563876783179296
       ],
       "treebank": "UD_Danish-DDT@2.10"
     },
@@ -1322,6 +1416,14 @@
     },
     {
       "appos": [
+        49,
+        0.0539053905390539,
+        0.004841897233201581
+      ],
+      "treebank": "UD_Western_Sierra_Puebla_Nahuatl-ITML@2.10"
+    },
+    {
+      "appos": [
         5,
         0.021739130434782608,
         0.0027129679869777536
@@ -1360,9 +1462,9 @@
     },
     {
       "appos": [
-        48,
-        0.12,
-        0.012872083668543845
+        49,
+        0.1225,
+        0.013140252078305176
       ],
       "treebank": "UD_Frisian_Dutch-Fame@2.10"
     },
@@ -1385,16 +1487,16 @@
     {
       "appos": [
         47,
-        0.02026735661923243,
-        0.0022782355792535145
+        0.02011986301369863,
+        0.0022677925211097706
       ],
       "treebank": "UD_Manx-Cadhan@2.10"
     },
     {
       "appos": [
         8,
-        0.03669724770642202,
-        0.0030211480362537764
+        0.03333333333333333,
+        0.0027884280237016382
       ],
       "treebank": "UD_Skolt_Sami-Giellagas@2.10"
     },
@@ -1456,9 +1558,9 @@
     },
     {
       "appos": [
-        6291,
-        0.3849825592069029,
-        0.015718383337664156
+        6277,
+        0.38410231305837716,
+        0.015681640463978696
       ],
       "treebank": "UD_French-GSD@2.10"
     },
@@ -1515,9 +1617,9 @@
     },
     {
       "appos": [
-        1536,
-        0.3281350138859218,
-        0.01051910697164772
+        1539,
+        0.32877590258491773,
+        0.010539652102451719
       ],
       "treebank": "UD_Romanian-SiMoNERo@2.10"
     },
@@ -1525,39 +1627,39 @@
       "appos": [
         187,
         0.187,
-        0.009011613898125392
+        0.00901335132790283
       ],
       "treebank": "UD_Arabic-PUD@2.10"
     },
     {
       "appos": [
-        79,
-        0.1446886446886447,
-        0.01886341929321872
+        86,
+        0.14802065404475043,
+        0.019077196095829637
       ],
       "treebank": "UD_Tupinamba-TuDeT@2.10"
     },
     {
       "appos": [
-        6044,
-        0.2395465895129008,
-        0.019789985167334084
+        6045,
+        0.23958622329673815,
+        0.01979312986847146
       ],
       "treebank": "UD_Belarusian-HSE@2.10"
     },
     {
       "appos": [
-        389,
-        0.19343610144206863,
-        0.0074563925627755415
+        408,
+        0.18862690707350901,
+        0.007304235740628021
       ],
       "treebank": "UD_Coptic-Scriptorium@2.10"
     },
     {
       "appos": [
         1,
-        0.010416666666666666,
-        0.0020161290322580645
+        0.0034602076124567475,
+        0.0007127583749109052
       ],
       "treebank": "UD_Yakut-YKTDT@2.10"
     },
@@ -1568,6 +1670,9 @@
         0.0023011589473243797
       ],
       "treebank": "UD_French-FQB@2.10"
+    },
+    {
+      "treebank": "UD_Abaza-ATB@2.10"
     },
     {
       "appos": [
@@ -1595,17 +1700,17 @@
     },
     {
       "appos": [
-        193,
-        0.030513833992094862,
-        0.0024639031800947264
+        224,
+        0.031154381084840057,
+        0.00246984365007608
       ],
       "treebank": "UD_Estonian-EWT@2.10"
     },
     {
       "appos": [
-        22,
-        0.06432748538011696,
-        0.0069160641307764855
+        24,
+        0.06504065040650407,
+        0.006995045176333431
       ],
       "treebank": "UD_Moksha-JR@2.10"
     },
@@ -1627,19 +1732,27 @@
     },
     {
       "appos": [
-        308,
-        0.06499261447562776,
-        0.0034238200048911714
+        311,
+        0.06559797511073613,
+        0.003457168901042709
       ],
       "treebank": "UD_Scottish_Gaelic-ARCOSG@2.10"
     },
     {
       "appos": [
-        6061,
-        0.5042848822697396,
-        0.01900464690425872
+        6062,
+        0.5043680838672102,
+        0.019008140074502376
       ],
       "treebank": "UD_Portuguese-GSD@2.10"
+    },
+    {
+      "appos": [
+        17,
+        0.17,
+        0.00787037037037037
+      ],
+      "treebank": "UD_Chinese-PatentChar@2.10"
     },
     {
       "appos": [
@@ -1654,9 +1767,9 @@
     },
     {
       "appos": [
-        118,
-        0.012088925315029198,
-        0.0009641862023320232
+        192,
+        0.01967011576682717,
+        0.0015333993546944383
       ],
       "treebank": "UD_Turkish-BOUN@2.10"
     },
@@ -1686,17 +1799,17 @@
     },
     {
       "appos": [
-        125,
-        0.03616898148148148,
-        0.00310667064320509
+        122,
+        0.03530092592592592,
+        0.003032110547768168
       ],
       "treebank": "UD_Uyghur-UDT@2.10"
     },
     {
       "appos": [
-        92,
-        0.05345729227193492,
-        0.0016575680593841774
+        82,
+        0.04764671702498547,
+        0.0014768388444636553
       ],
       "treebank": "UD_Latin-UDante@2.10"
     },
@@ -1710,6 +1823,9 @@
         0.008211238125905651
       ],
       "treebank": "UD_Chukchi-HSE@2.10"
+    },
+    {
+      "treebank": "UD_Xavante-XDT@2.10"
     }
   ]
 }
